# fastapi-usecase

./: README.md  main.py  pyproject.toml
src/file-based-templates/: index.html
src/file-based-templates/about/: __init__.py  index.html
src/file-based-templates/nested/path/should/works/: index.html
src/file-based-templates/sponsor/: __init__.py  index.html
