[tool.poetry]
name = "fastapi-usecase"
version = "0.1.0"
description = "A collection of FastAPI use cases"
authors = ["Tegar Imansyah <egar.imansyah@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi_usecase"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
